--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_svg: ^2.0.10+1 # Sử dụng SVG trong app
+  provider: ^6.1.2 # quản lý state
+  uuid: ^3.0.4
+  status_alert: ^1.0.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
